Fix Java 21 usage getLast()